docker_sway_local/envoy.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address: { address: 0.0.0.0, port_value: 8082 }

static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address: { address: 0.0.0.0, port_value: 8080 }
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          codec_type: auto
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              # Publish API
              - match: { prefix: "/inf.ApiSession" }
                route: { cluster: "server_api", max_grpc_timeout: 15s }
              - match: { prefix: "/inf.ApiAccount" }
                route: { cluster: "server_api", max_grpc_timeout: 15s }
              - match: { prefix: "/inf.ApiPush" }
                route: { cluster: "server_push_api", max_grpc_timeout: 0s, timeout: 0s }
              - match: { prefix: "/inf.ApiStorage" }
                route: { cluster: "server_api", max_grpc_timeout: 15s }
              - match: { prefix: "/inf.ApiOAuth" }
                route: { cluster: "server_api", max_grpc_timeout: 15s }
              - match: { prefix: "/inf.ApiProfiles" }
                route: { cluster: "server_api", max_grpc_timeout: 15s }
              - match: { prefix: "/inf.ApiOffers" }
                route: { cluster: "server_api", max_grpc_timeout: 15s }
              - match: { prefix: "/inf.ApiProposals" }
                route: { cluster: "server_api", max_grpc_timeout: 15s }
              - match: { prefix: "/inf.ApiProposal" }
                route: { cluster: "server_api", max_grpc_timeout: 15s }
              - match: { prefix: "/inf.ApiExplore" }
                route: { cluster: "server_explore_api", max_grpc_timeout: 15s }
              - match: { prefix: "/ws" }
                route: { cluster: "server_push_ws", upgrade_configs: [ upgrade_type: "websocket" ], timeout: 0s } # TODO: This isn't working yet
              # Publish public JWKS (for debugging)
              - match:  { prefix: "/.well-known/jwks.json" }
                route: { cluster: "server_jwt_http" }
              #cors:
              #  allow_origin:
              #  - "*"
              #  allow_methods: GET, PUT, DELETE, POST, OPTIONS
              #  allow_headers: keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,custom-header-1,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web,grpc-timeout
              #  max_age: "1728000"
              #  expose_headers: custom-header-1,grpc-status,grpc-message
              #  enabled: true
          http_filters:
          - name: envoy.grpc_web
          #- name: envoy.cors
          - name: envoy.filters.http.jwt_authn
            config:
              providers:
                sway_dev_provider:
                  issuer: https://app.sway-dev.net
                  #local_jwks:
                  #  filename: /etc/envoy/jwks/jwks_public.json
                  remote_jwks:
                    http_uri:
                      uri: http://127.0.0.1:8928/.well-known/jwks.json
                      cluster: server_jwt_http
                    cache_duration:
                      seconds: 3600
                  forward: true
                  forward_payload_header: x-jwt-payload
              rules:
              - match:
                  prefix: /
                requires:
                  provider_and_audiences:
                    provider_name: sway_dev_provider
                    audiences:
                      infsandbox
          - name: envoy.router
  clusters:
  # /inf.ApiSession
  # /inf.ApiAccount
  # /inf.ApiStorage
  # /inf.ApiOAuth
  # /inf.ApiProfiles
  # /inf.ApiOffers
  # /inf.ApiProposals
  # /inf.ApiProposal
  # /inf.ApiExplore
  - name: server_api
    connect_timeout: 0.25s
    type: logical_dns
    http2_protocol_options: {}
    lb_policy: round_robin
    hosts: [{ socket_address: { address: 127.0.0.1, port_value: 8900 }}]
  # /inf.ApiPush
  - name: server_push_api
    connect_timeout: 0.25s
    type: logical_dns
    http2_protocol_options: {}
    lb_policy: round_robin
    hosts: [{ socket_address: { address: 127.0.0.1, port_value: 8910 }}]
  # /inf.ApiExplore
  - name: server_explore_api
    connect_timeout: 0.25s
    type: logical_dns
    http2_protocol_options: {}
    lb_policy: round_robin
    hosts: [{ socket_address: { address: 127.0.0.1, port_value: 8930 }}]
  # /ws
  - name: server_push_ws
    connect_timeout: 0.25s
    type: logical_dns
    http2_protocol_options: {}
    lb_policy: round_robin
    hosts: [{ socket_address: { address: 127.0.0.1, port_value: 8911 }}]
  # http://127.0.0.1:8928/.well-known/jwks.json
  - name: server_jwt_http
    connect_timeout: 0.25s
    type: logical_dns
    # http2_protocol_options: {}
    lb_policy: round_robin
    hosts: [{ socket_address: { address: 127.0.0.1, port_value: 8928 }}]
